--- a/index.html
+++ b/index.html
@@ -9,64 +9,63 @@
     <header>
         Mercedes Formula One Team 2021
     </header>
-
+   <section id="pics">
+        <img id="pic1" src="https://www.formula1.com/content/fom-website/en/drivers/lewis-hamilton/_jcr_content/image.img.1920.medium.jpg/1616676634721.jpg" alt="Lewis Hamilton" width="300">
+        <img id="pic2" src="https://www.formula1.com/content/fom-website/en/drivers/valtteri-bottas/_jcr_content/image.img.1920.medium.jpg/1616676580165.jpg" alt="Valtteri Bottas" width="300">
+        </section>
     <section id="statsTable" >
         <table>
-            <tr>
-                <th></th>
-                <th><img src="https://www.formula1.com/content/fom-website/en/drivers/lewis-hamilton/_jcr_content/image.img.1920.medium.jpg/1616676634721.jpg" alt="Lewis Hamilton" width="300"></th>
-                <th><img src="https://www.formula1.com/content/fom-website/en/drivers/valtteri-bottas/_jcr_content/image.img.1920.medium.jpg/1616676580165.jpg" alt="Valtteri Bottas" width="300"></th>
-            </tr>
-            <tr>
+           
+            <tr id="names">
                 <th>Driver's Name</th>
                 <th>Lewis Hamilton</th>
                 <th>Valtteri Bottas</th>
             </tr>
             <tr>
                 <th>Country</th>
-                <th>United Kingdom</th>
-                <th>Finland</th>
+                <td>United Kingdom</td>
+                <td>Finland</td>
             </tr>
             <tr>
                 <th>Podiums</th>
-                <th>172</th>
-                <th>62</th>
+                <td>172</td>
+                <td>62</td>
             </tr>
             <tr>
                 <th>Points</th>
-                <th>3955</th>
-                <th>1620</th>
+                <td>3955</td>
+                <td>1620</td>
             </tr>
             <tr>
                 <th>GP Entered</th>
-                <th>276</th>
-                <th>166</th>
+                <td>276</td>
+                <td>166</td>
             </tr>
             <tr>
                 <th>World Championship</th>
-                <th>7</th>
-                <th>0</th>
+                <td>7</td>
+                <td>0</td>
             </tr>
             <tr>
                 <th>Highest Race Finish</th>
-                <th>1(x99)</th>
-                <th>1(x9)</th>
+                <td>1(x99)</td>
+                <td>1(x9)</td>
             </tr>
             <tr>
                 <th>Highest Grid Position</th>
-                <th>1</th>
+                <td>1</td>
                 <th>1</th>
             </tr>
             <tr>
                 <th>Date of Birth</th>
-                <th>07/01/1985</th>
-                <th>28/08/1989</th>
+                <td>07/01/1985</td>
+                <td>28/08/1989</td>
             </tr>
         </table>
     </section>
 
     <section id="teamPhoto">
-        <img src="https://cdn-1.motorsport.com/static/img/amp/400000/440000/443000/443600/443665/s6_22110/f1-mercedes-amg-w04-launch-2013-toto-wolff-mercedes-amg-f1-shareholder-and-executive-direc.jpg" alt="Formula 1 Mercedes Team">
+        <a href="https://cdn-1.motorsport.com/static/img/amp/400000/440000/443000/443600/443665/s6_22110/f1-mercedes-amg-w04-launch-2013-toto-wolff-mercedes-amg-f1-shareholder-and-executive-direc.jpg">Team Photo</a>
     </section>
 
     <footer>
@@ -75,4 +74,4 @@
 </body>
 
 
-</html>html>
+</html>
